[package]
name = "velo"
version = "0.1.0"
edition = "2021"

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1.0.210", features = ["derive"] }
aes-gcm = "0.11.0-pre.2"
aead = "0.6.0-rc.0"
rand = "0.9.0-alpha.2"
serde_json = "1.0.128"
sha2 = "0.11.0-pre.4"
rpassword = "7.3.1"
whoami = "1.5.2"
dirs = "5.0.1"
regex = "1.11.0"
rustyline = "14.0.0"
